# cli-autoupdate

./: Cargo.toml  README.md
src/: impls.rs  lib.rs
