[package]
name = "cli-autoupdate"
version = "0.0.7"
edition = "2021"
license = "MIT"
authors = ["Alessandro Crugnola <alessandro.crugnola@swisscom.com>"]
repository = "https://github.com/sephiroth74/cli-autoupdate"
description = "Simple autoupdate library for checking/update binaries"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
progress = ["dep:indicatif"]

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
reqwest = { version = "0.11.24", features = ["json", "stream"] }
semver = "1.0.22"
serde = { version = "1.0.197", features = ["std", "derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
tracing = "0.1.40"
futures-util = "0.3.30"
flate2 = "1.0.28"
tar = "0.4.40"
sha256 = "1.5.0"
indicatif = { version = "0.17.8", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
logging-subscriber = "0.1.3"
tokio-test = "0.4.3"
console = "0.15.8"
indicatif = "0.17.8"
